--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
 </head>
 <body>
   
+  
+  <form id="joke-generator">
+    <h4>Generate a Joke!</h4>
+    <label for="new-joke-setup">Joke Setup: </label>
+    <textarea name="joke-setup" id="new-joke-setup"></textarea>
+    <label for="new-joke-punchline">Punchline: </label>
+    <textarea name="joke-punchline" id="new-joke-punchline"></textarea>
+    <input type="submit" id='submit-button' value="Submit Here" />
+  </form>
+  
+  
+  <form id="new-joke">
+    <h4>Submit Your Own Joke!</h4>
+    <label for="new-joke-setup">Joke Setup: </label>
+    <textarea name="joke-setup" id="new-joke-setup"></textarea>
+    <label for="new-joke-punchline">Punchline: </label>
+    <textarea name="joke-punchline" id="new-joke-punchline"></textarea>
+    <input type="submit" id='submit-button' value="Submit Here" />
+  </form>
 </body>
 </html>
