new joke form in html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
 </head>
 <body>
   
-  
-  <form id="joke-generator">
-    <h4>Generate a Joke!</h4>
-    <label for="new-joke-setup">Joke Setup: </label>
-    <textarea name="joke-setup" id="new-joke-setup"></textarea>
-    <label for="new-joke-punchline">Punchline: </label>
-    <textarea name="joke-punchline" id="new-joke-punchline"></textarea>
-    <input type="submit" id='submit-button' value="Submit Here" />
-  </form>
+
   
   
   <form id="new-joke">
@@ -26,6 +18,10 @@
     <textarea name="joke-setup" id="new-joke-setup"></textarea>
     <label for="new-joke-punchline">Punchline: </label>
     <textarea name="joke-punchline" id="new-joke-punchline"></textarea>
+    <label for="new-joke-type">Joke Type: </label>
+    <textarea name="joke-type" id="new-joke-type"></textarea>
+    <label for="user-name">Your Name(Optional): </label>
+    <textarea name="user-name" id="user-name"></textarea>
     <input type="submit" id='submit-button' value="Submit Here" />
   </form>
 </body>
