--- a/index.html
+++ b/index.html
@@ -3,26 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Party Favor - Joke Generator</title>
   <link rel="stylesheet" type="text/css" href="index.css" />
   <script defer type="module" src="index.js"></script>
-  <h1>Party Favor</h1>
 </head>
 <body>
+  <h1>Party Favor - Joke Generator</h1>
+
+<div class="container-1">
+  <button id="reveal-button">Get a Random Joke!</button>
+  <div id="og-joke-reveal" style="display: none;">
+    <p></p>
+  </div>
+</div>
+
+<div class="container-2">
+  <div class="dropdown">
+    <label for="joke-type-selection">Choose by Joke Type:</label>
+    <select id="joke-type-selection" name="joke-type-selection">
+      <option value="">Select One …</option>
+      <option value="general">General</option>
+      <option value="programming">Programming</option>
+      <option value="knock-knock">Knock Knock</option>
+    </select>
+  </div>
+
+<form id="new-joke">
+  <h2>Submit Your Own Joke!</h2>
+  <label for="new-joke-setup">Joke Setup:</label>
+  <textarea name="joke-setup" id="new-joke-setup" required></textarea>
+  <label for="new-joke-punchline">Punchline:</label>
+  <textarea name="joke-punchline" id="new-joke-punchline" required></textarea>
+  <label for="new-joke-type">Joke Type: </label>
+  <textarea name="joke-type" id="new-joke-type"></textarea>
+  <label for="user-name">Your Name(Optional):</label>
+  <textarea name="user-name" id="user-name"></textarea>
+  <input type="submit" id='submit-button' value="Submit Here">
+</form>
+</div>
   
 
-  
-  
-  <form id="new-joke">
-    <h4>Submit Your Own Joke!</h4>
-    <label for="new-joke-setup">Joke Setup: </label>
-    <textarea name="joke-setup" id="new-joke-setup"></textarea>
-    <label for="new-joke-punchline">Punchline: </label>
-    <textarea name="joke-punchline" id="new-joke-punchline"></textarea>
-    <label for="new-joke-type">Joke Type: </label>
-    <textarea name="joke-type" id="new-joke-type"></textarea>
-    <label for="user-name">Your Name(Optional): </label>
-    <textarea name="user-name" id="user-name"></textarea>
-    <input type="submit" id='submit-button' value="Submit Here" />
-  </form>
 </body>
 </html>
